demo-app/loadbalancer-demo-app-duplicate-ingress-host.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo2-app
  labels:
    app: http-echo
spec:
  containers:
  - name: foo2-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=foo2"
---
kind: Pod
apiVersion: v1
metadata:
  name: bar2-app
  labels:
    app: http-echo
spec:
  containers:
  - name: bar2-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=bar2"
---
kind: Service
apiVersion: v1
metadata:
  name: foo2-service
spec:
  type: LoadBalancer
  selector:
    app: http-echo
  ports:
  # Default port used by the image
  - port: 5678

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host-duplicate-hosts
spec:
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - pathType: Prefix
            path: "/bar2"
            backend:
              service:
                name: foo2-service
                port:
                  number: 80
    - host: "*.foo.com"
      http:
        paths:
          - pathType: Prefix
            path: "/foo2"
            backend:
              service:
                name: foo2-service
                port:
                  number: 80
